--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build",
+    "build": "npm run build:all",
+    "build:main": "tsc -b && vite build",
+    "build:submodule": "cd buriedtown && npm ci && npm run build",
+    "build:all": "npm run build:main && npm run build:submodule && node scripts/copy-submodule-build.js",
     "lint": "eslint .",
     "preview": "vite preview"
   },
