--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "buriedtown"]
-	path = buriedtown
+[submodule "buriedcity"]
+	path = buriedcity
 	url = https://github.com/githubfrostpixel/buried-city-web.git
