--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "build": "npm run build:all",
     "build:main": "tsc -b && vite build",
-    "build:submodule": "cd buriedtown && npm ci && npx vite build",
+    "build:submodule": "cd buriedcity && npm ci && npx vite build",
     "build:all": "npm run build:main && npm run build:submodule && node scripts/copy-submodule-build.js",
     "lint": "eslint .",
     "preview": "vite preview"
